Update API endpoint for GitHub Pages deployment

--- a/reset-password.html
+++ b/reset-password.html
@@ -416,7 +416,7 @@
                 resetBtn.disabled = true;
                 
                 // Call your backend API
-                fetch('http://localhost:3000/api/auth/reset-password', {
+                fetch('/api/auth/reset-password', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
