--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Reset - Art Law Communion</title>
+    <link rel="icon" type="image/jpeg" href="alc logo.jpg">
+    <link rel="shortcut icon" type="image/jpeg" href="alc logo.jpg">
     <style>
         * {
             margin: 0;
